--- a/deleteNews.html
+++ b/deleteNews.html
@@ -11,6 +11,7 @@
             <h2>Borrar noticias</h2>
             <input type="text" id="guid" name="guid" placeholder="Texto que contiene la columna GUID" required><br><br>
             <button type="submit">Enviar</button>
+            <button type="submit" name="eliminar_todo">Eliminar todo</button>
         </form>
 </body>
 </html>
