--- a/deleteNews.html
+++ b/deleteNews.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div>
         <form action="deleteNews.php" method="post">
             <h2>Borrar noticias</h2>
             <input type="text" id="guid" name="guid" placeholder="Texto que contiene la columna GUID" required><br><br>
             <button type="submit">Enviar</button>
-            <button type="submit" name="eliminar_todo">Eliminar todo</button>
         </form>
+        
+        <form action="deleteNews.php" method="post">
+            <button type="submit" name="delete_all" class="second_button">Eliminar todo</button>
+        </form>
+    </div>
 </body>
 </html>
